chore(fabric): Bump Minecraft dependency to 1.20.4
Doesn't change the versions we are compatible with.

Allows us to use the new `fabric-api-bom` rather than loom methods that make web requests during configuration time.